--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ subprojects {
     }
 
     dependencies {
+        compileOnly group: 'javax', name: 'javaee-api', version: '7.0'
+//        compile group: 'org.codehaus.jettison', name: 'jettison', version: '1.4.0'
+//        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.6'
+//        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.6'
+        compileOnly group: 'org.apache.cxf', name: 'cxf-rt-rs-json-basic', version: '3.2.5'
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 }
@@ -29,13 +34,13 @@ project(':phoenix-api') {
     apply plugin: 'war'
 
     dependencies {
-        compileOnly group: 'javax', name: 'javaee-api', version: '7.0'
         compile project(':phoenix-server')
     }
 }
 
 project(':phoenix-client') {
     dependencies {
+        compile group: 'org.apache.cxf', name: 'cxf-rt-rs-client', version: '3.2.5'
         compile project(':phoenix-server')
     }
 }
