--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ project(':phoenix-api') {
     apply plugin: 'war'
 
     dependencies {
+        compile 'io.jsonwebtoken:jjwt:0.9.0'
         compile project(':phoenix-server')
     }
 }
